--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Busemin Duygu Durumu</title>
+  <title>Yanımda — Bir Tuş Uzaklıkta</title>
   <style>
     :root{
       --bg1:#0b0b0d;
@@ -132,7 +132,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Busemin Duygu Durumu</h1>
+    <h1>Yanımda — Bir Tuş Uzaklıkta</h1>
 
     <div class="grid">
       <button onclick="mood('Üzgünüm')">😔 Üzgünüm</button>
@@ -153,7 +153,7 @@
       <div id="sub" class="sub"></div>
 
       <div class="warn">
-        Demo: Meraktan hepsine basıp mesajları tüketme 🙂 Gerçek kullanımda ihtiyaç oldukça basılır.
+        Meraktan hepsine basıp mesajları tüketme 🙂 İhtiyaç oldukça kullan.
       </div>
 
       <div class="secretWrap">
@@ -162,6 +162,7 @@
     </div>
   </div>
 
+  <!-- Gizli Soru Modal -->
   <div id="secretModal" class="modal" onclick="modalBgClose(event)">
     <div class="modalInner">
       <div class="modalCard" onclick="event.stopPropagation()">
@@ -175,6 +176,7 @@
     </div>
   </div>
 
+  <!-- Buluşalım Modal -->
   <div id="meetModal" class="modal" onclick="meetBgClose(event)">
     <div class="modalInner">
       <div class="modalCard" onclick="event.stopPropagation()">
@@ -191,11 +193,27 @@
   </div>
 
 <script>
-  const TOPIC = "Yanimdaappdemo";
+  // ====== NTFY ======
+  const TOPIC = "Yanimdaappdemo"; // istersen değiştir
   const NTFY = "https://ntfy.sh/" + TOPIC;
+
+  // Demo için gerçek olmayan numara
   const MY_PHONE = "05000000000";
+
   const MONEY_TEXT = "Kocambank devrede";
 
+  // ====== SIRALI MESAJ SEÇİCİ (eşindeki gibi) ======
+  function nextSequential(key, arr){
+    if (!arr || arr.length === 0) return "(mesaj yok)";
+    const k = "seq_" + key;
+    let i = parseInt(localStorage.getItem(k) || "0", 10);
+    if (isNaN(i) || i < 0) i = 0;
+    const msg = arr[i % arr.length];
+    localStorage.setItem(k, String((i + 1) % arr.length));
+    return msg;
+  }
+
+  // 2’şer mesaj örnek (istersen artır)
   const MSG = {
     "Üzgünüm": [
       "Canım… tamam. Şu an tek isteğim iyi olman. İstersen konuşalım, ben buradayım.",
@@ -234,12 +252,11 @@
     ]
   };
 
+  // Gizli soru (sırayla)
   const SECRET_ITEMS = [
     { id: "Gizli Soru 1", question: "Beni seviyor musun?", yesReply: "Biliyordum 😄\nBen de seni çok seviyorum." },
     { id: "Gizli Soru 2", question: "Beni seçer misin, yine yeniden?", yesReply: "Tam da bunu duymak istiyordum 😄\nİyi ki varsın." }
   ];
-
-  function pick(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
 
   function setStatus(bigText, smallText=""){
     document.getElementById("status").textContent = bigText;
@@ -260,17 +277,21 @@
     img.src = url;
   }
 
+  // Mood: SIRALI
   function mood(type){
-    const msg = pick(MSG[type] || ["(mesaj yok)"]);
+    const arr = MSG[type] || ["(mesaj yok)"];
+    const msg = nextSequential(`mood_${TOPIC}_${type}`, arr);
     setStatus(msg, `${type} → gönderildi ✅`);
     ntfySend(type, msg, "high", "speech_balloon");
   }
 
+  // Money
   function money(){
     setStatus(MONEY_TEXT, "Param Bitti → gönderildi ✅");
     ntfySend("Param Bitti", MONEY_TEXT, "high", "moneybag");
   }
 
+  // Danger
   function getLocation(){
     return new Promise((resolve, reject) => {
       if(!navigator.geolocation) return reject("Konum desteklenmiyor");
@@ -293,9 +314,11 @@
     const body = `Tehlikedeyim butonuna basıldı!\nKonum: ${maps}\n(Demo arama: ${MY_PHONE})`;
     setStatus(body, "Tehlikedeyim → gönderildi ✅");
     ntfySend("Tehlikedeyim", body, "urgent", "rotating_light,warning");
+
     window.location.href = `tel:${MY_PHONE}`;
   }
 
+  // Meet modal
   function openMeet(){
     document.getElementById("meetModal").style.display = "block";
     ntfySend("Buluşalım", "Buluşalım menüsü açıldı.", "high", "round_pushpin");
@@ -303,15 +326,18 @@
   function closeMeet(){ document.getElementById("meetModal").style.display = "none"; }
   function meetBgClose(e){ if (e.target && e.target.id === "meetModal") closeMeet(); }
 
+  // Meet: SIRALI
   function meetPick(kind){
-    const msg = pick(MEET[kind] || ["Buluşalım mı?"]);
+    const arr = MEET[kind] || ["Buluşalım mı?"];
+    const msg = nextSequential(`meet_${TOPIC}_${kind}`, arr);
     closeMeet();
     setStatus(msg, `Buluşalım → ${kind} ✅`);
     ntfySend("Buluşalım", `${kind} seçildi:\n${msg}`, "high", "round_pushpin");
   }
 
+  // Secret: sırayla sorular
   function nextSecretItem(){
-    const k = "idx_secret_demo";
+    const k = "idx_secret_demo_" + TOPIC;
     const idx = parseInt(localStorage.getItem(k) || "0", 10);
     const item = SECRET_ITEMS[idx % SECRET_ITEMS.length];
     localStorage.setItem(k, String((idx + 1) % SECRET_ITEMS.length));
