--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Yanımda — Bir Tuş Uzaklıkta</title>
+  <title>Mervemin Ruh Hali ❤️</title>
   <style>
     :root{
       --bg1:#0b0b0d;
@@ -132,7 +132,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Yanımda — Bir Tuş Uzaklıkta</h1>
+    <h1>Mervemin Ruh Hali ❤️</h1>
 
     <div class="grid">
       <button onclick="mood('Üzgünüm')">😔 Üzgünüm</button>
@@ -194,7 +194,7 @@
 
 <script>
   // ====== NTFY ======
-  const TOPIC = "Yanimdaappdemo"; // istersen değiştir
+  const TOPIC = "Yanimdaappdemo"; // kendi topic'in neyse burayı yaz
   const NTFY = "https://ntfy.sh/" + TOPIC;
 
   // Demo için gerçek olmayan numara
@@ -213,7 +213,7 @@
     return msg;
   }
 
-  // 2’şer mesaj örnek (istersen artır)
+  // Örnek 2’şer mesaj (istersen artır)
   const MSG = {
     "Üzgünüm": [
       "Canım… tamam. Şu an tek isteğim iyi olman. İstersen konuşalım, ben buradayım.",
